修改字体路径

--- a/template/src/css/ui.scss
+++ b/template/src/css/ui.scss
@@ -1,5 +1,5 @@
-$futura-font-path: "../../lily/fonts/futura";
-$fa-font-path: "../../lily/fonts";
+$futura-font-path: "../../fonts/futura";
+$fa-font-path: "../../fonts";
 
 @import "../../lily/css/lily.scss";
 
