--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
   <div class='container'>
     <div class='row'>
       <div class='col-pad-12'>
-        <a class='site' href='{{ site.baseurl }}'>
+        <a class='site' href='{{ site.baseurl }}/'>
           <span class='s0'>MINDPIN</span>
           <span class='s1'>Documents</span>
         </a>
