--- a/_includes/htmlhead.html
+++ b/_includes/htmlhead.html
@@ -2,5 +2,5 @@
   <title>mindpin docs</title>
   <meta content='text/html; charset=utf-8' http-equiv='Content-Type'>
   <meta content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no' name='viewport'>
-  <link href='{{ "css/ui.css" | prepend: site.baseurl }}' rel='stylesheet'>
+  <link href='{{ site.baseurl }}/css/ui.css' rel='stylesheet'>
 </head>
