--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -3,7 +3,7 @@
   {% assign value = cat[1] %}
   <div class='category'>
     <div class='name'>
-      <h4><a href="{{ key | downcase | replace:' ','-' | prepend:'categories/' | prepend: site.baseurl }}">{{ value.name }}</a></h4>
+      <h4><a href="{{ site.baseurl }}/categories/{{ key | downcase | replace:' ','-' }}">{{ value.name }}</a></h4>
     </div>
     <div class='articles'>
       {% for article in site.articles %}
@@ -11,12 +11,12 @@
           {% for art_cat in article.categories %}
             {% if key == art_cat %}
               <div class='article'> 
-                <a href="{{ site.baseurl }}articles/{{ article.title }}.html">{{ article.reader-title }}</a>
+                <a href="{{ site.baseurl }}/articles/{{ article.title }}.html">{{ article.reader-title }}</a>
                 <div class='subs'>
                   {% for sub_article in site.articles %}
                     {% if sub_article.parent == article.title %}
                       <div class='sub'>
-                        <a href='{{ site.baseurl }}articles/{{ sub_article.title }}.html'>{{ sub_article.reader-title }}</a>
+                        <a href='{{ site.baseurl }}/articles/{{ sub_article.title }}.html'>{{ sub_article.reader-title }}</a>
                       </div>
                     {% endif %}
                   {% endfor %}
