--- a/_includes/htmlhead.html
+++ b/_includes/htmlhead.html
@@ -3,4 +3,9 @@
   <meta content='text/html; charset=utf-8' http-equiv='Content-Type'>
   <meta content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no' name='viewport'>
   <link href='{{ site.baseurl }}/css/ui.css' rel='stylesheet'>
+
+  <script type='text/javascript' src='{{ site.baseurl }}/js/turbolinks.js'></script>
+  <script type='text/javascript' src='http://libs.useso.com/js/jquery/2.1.1/jquery.min.js'></script>
+
+  <script type='text/javascript' src='{{ site.baseurl }}/js/ui.js'></script>
 </head>
