--- a/_includes/category-articles.html
+++ b/_includes/category-articles.html
@@ -1,4 +1,9 @@
-<h1>Category: {{ page.title }}</h1>
+<h1>
+  <a href='https://github.com/{{ page.title }}' target='_blank'>
+    <i class='fa fa-github'></i>
+    <span>{{ page.title }}</span>
+  </a>
+</h1>
 
 <div class='articles'>
   {% for article in site.articles %}
