--- a/_sass/_syntax-highlighting.scss
+++ b/_sass/_syntax-highlighting.scss
@@ -1,67 +1,415 @@
-/**
- * Syntax highlighting styles
- */
-.highlight {
-    background: #fff;
-    @extend %vertical-rhythm;
+.highlight pre {
+  background-color: transparent;
+  font-size: 14px;
+}
 
-    .c     { color: #998; font-style: italic } // Comment
-    .err   { color: #a61717; background-color: #e3d2d2 } // Error
-    .k     { font-weight: bold } // Keyword
-    .o     { font-weight: bold } // Operator
-    .cm    { color: #998; font-style: italic } // Comment.Multiline
-    .cp    { color: #999; font-weight: bold } // Comment.Preproc
-    .c1    { color: #998; font-style: italic } // Comment.Single
-    .cs    { color: #999; font-weight: bold; font-style: italic } // Comment.Special
-    .gd    { color: #000; background-color: #fdd } // Generic.Deleted
-    .gd .x { color: #000; background-color: #faa } // Generic.Deleted.Specific
-    .ge    { font-style: italic } // Generic.Emph
-    .gr    { color: #a00 } // Generic.Error
-    .gh    { color: #999 } // Generic.Heading
-    .gi    { color: #000; background-color: #dfd } // Generic.Inserted
-    .gi .x { color: #000; background-color: #afa } // Generic.Inserted.Specific
-    .go    { color: #888 } // Generic.Output
-    .gp    { color: #555 } // Generic.Prompt
-    .gs    { font-weight: bold } // Generic.Strong
-    .gu    { color: #aaa } // Generic.Subheading
-    .gt    { color: #a00 } // Generic.Traceback
-    .kc    { font-weight: bold } // Keyword.Constant
-    .kd    { font-weight: bold } // Keyword.Declaration
-    .kp    { font-weight: bold } // Keyword.Pseudo
-    .kr    { font-weight: bold } // Keyword.Reserved
-    .kt    { color: #458; font-weight: bold } // Keyword.Type
-    .m     { color: #099 } // Literal.Number
-    .s     { color: #d14 } // Literal.String
-    .na    { color: #008080 } // Name.Attribute
-    .nb    { color: #0086B3 } // Name.Builtin
-    .nc    { color: #458; font-weight: bold } // Name.Class
-    .no    { color: #008080 } // Name.Constant
-    .ni    { color: #800080 } // Name.Entity
-    .ne    { color: #900; font-weight: bold } // Name.Exception
-    .nf    { color: #900; font-weight: bold } // Name.Function
-    .nn    { color: #555 } // Name.Namespace
-    .nt    { color: #000080 } // Name.Tag
-    .nv    { color: #008080 } // Name.Variable
-    .ow    { font-weight: bold } // Operator.Word
-    .w     { color: #bbb } // Text.Whitespace
-    .mf    { color: #099 } // Literal.Number.Float
-    .mh    { color: #099 } // Literal.Number.Hex
-    .mi    { color: #099 } // Literal.Number.Integer
-    .mo    { color: #099 } // Literal.Number.Oct
-    .sb    { color: #d14 } // Literal.String.Backtick
-    .sc    { color: #d14 } // Literal.String.Char
-    .sd    { color: #d14 } // Literal.String.Doc
-    .s2    { color: #d14 } // Literal.String.Double
-    .se    { color: #d14 } // Literal.String.Escape
-    .sh    { color: #d14 } // Literal.String.Heredoc
-    .si    { color: #d14 } // Literal.String.Interpol
-    .sx    { color: #d14 } // Literal.String.Other
-    .sr    { color: #009926 } // Literal.String.Regex
-    .s1    { color: #d14 } // Literal.String.Single
-    .ss    { color: #990073 } // Literal.String.Symbol
-    .bp    { color: #999 } // Name.Builtin.Pseudo
-    .vc    { color: #008080 } // Name.Variable.Class
-    .vg    { color: #008080 } // Name.Variable.Global
-    .vi    { color: #008080 } // Name.Variable.Instance
-    .il    { color: #099 } // Literal.Number.Integer.Long
+.highlight pre code {
+  color: #637c84;
+  font-family: "source-code", '微软雅黑' !important;
+}
+
+.highlight {
+  color: #333333;
+  background: #f8f5ec;
+}
+
+.highlight .c {
+  color: #93a1a1;
+}
+
+
+.highlight .g {
+  color: #637c84;
+}
+
+/* Generic */
+
+.highlight .k {
+  color: #859900;
+}
+
+/* Keyword */
+
+.highlight .l {
+  color: #637c84;
+}
+
+/* Literal */
+
+.highlight .n {
+  color: #637c84;
+}
+
+/* Name */
+
+.highlight .o {
+  color: #859900;
+}
+
+/* Operator */
+
+.highlight .x {
+  color: #cc7a6f;
+}
+
+/* Other */
+
+.highlight .p {
+  color: #637c84;
+}
+
+/* Punctuation */
+
+.highlight .cm {
+  color: #93a1a1;
+}
+
+/* Comment.Multiline */
+
+.highlight .cp {
+  color: #859900;
+}
+
+/* Comment.Preproc */
+
+.highlight .c1 {
+  color: #93a1a1;
+}
+
+/* Comment.Single */
+
+.highlight .cs {
+  color: #859900;
+}
+
+/* Comment.Special */
+
+.highlight .gd {
+  color: #36958e;
+}
+
+/* Generic.Deleted */
+
+.highlight .ge {
+  font-style: italic;
+  color: #637c84;
+}
+
+/* Generic.Emph */
+
+.highlight .gr {
+  color: #dc322f;
+}
+
+/* Generic.Error */
+
+.highlight .gh {
+  color: #cc7a6f;
+}
+
+/* Generic.Heading */
+
+.highlight .gi {
+  color: #859900;
+}
+
+/* Generic.Inserted */
+
+.highlight .go {
+  color: #637c84;
+}
+
+/* Generic.Output */
+
+.highlight .gp {
+  color: #637c84;
+}
+
+/* Generic.Prompt */
+
+.highlight .gs {
+  font-weight: bold;
+  color: #637c84;
+}
+
+/* Generic.Strong */
+
+.highlight .gu {
+  color: #cc7a6f;
+}
+
+/* Generic.Subheading */
+
+.highlight .gt {
+  color: #637c84;
+}
+
+/* Generic.Traceback */
+
+.highlight .kc {
+  color: #cc7a6f;
+}
+
+/* Keyword.Constant */
+
+.highlight .kd {
+  color: #268bd2;
+}
+
+/* Keyword.Declaration */
+
+.highlight .kn {
+  color: #859900;
+}
+
+/* Keyword.Namespace */
+
+.highlight .kp {
+  color: #859900;
+}
+
+/* Keyword.Pseudo */
+
+.highlight .kr {
+  color: #268bd2;
+}
+
+/* Keyword.Reserved */
+
+.highlight .kt {
+  color: #dc322f;
+}
+
+/* Keyword.Type */
+
+.highlight .ld {
+  color: #637c84;
+}
+
+/* Literal.Date */
+
+.highlight .m {
+  color: #36958e;
+}
+
+/* Literal.Number */
+
+.highlight .s {
+  color: #36958e;
+}
+
+/* Literal.String */
+
+.highlight .na {
+  color: #637c84;
+}
+
+/* Name.Attribute */
+
+.highlight .nb {
+  color: #b58900;
+}
+
+/* Name.Builtin */
+
+.highlight .nc {
+  color: #268bd2;
+}
+
+/* Name.Class */
+
+.highlight .no {
+  color: #cc7a6f;
+}
+
+/* Name.Constant */
+
+.highlight .nd {
+  color: #268bd2;
+}
+
+/* Name.Decorator */
+
+.highlight .ni {
+  color: #cc7a6f;
+}
+
+/* Name.Entity */
+
+.highlight .ne {
+  color: #cc7a6f;
+}
+
+/* Name.Exception */
+
+.highlight .nf {
+  color: #268bd2;
+}
+
+/* Name.Function */
+
+.highlight .nl {
+  color: #637c84;
+}
+
+/* Name.Label */
+
+.highlight .nn {
+  color: #637c84;
+}
+
+/* Name.Namespace */
+
+.highlight .nx {
+  color: #637c84;
+}
+
+/* Name.Other */
+
+.highlight .py {
+  color: #637c84;
+}
+
+/* Name.Property */
+
+.highlight .nt {
+  color: #268bd2;
+}
+
+/* Name.Tag */
+
+.highlight .nv {
+  color: #268bd2;
+}
+
+/* Name.Variable */
+
+.highlight .ow {
+  color: #859900;
+}
+
+/* Operator.Word */
+
+.highlight .w {
+  color: #637c84;
+}
+
+/* Text.Whitespace */
+
+.highlight .mf {
+  color: #36958e;
+}
+
+/* Literal.Number.Float */
+
+.highlight .mh {
+  color: #36958e;
+}
+
+/* Literal.Number.Hex */
+
+.highlight .mi {
+  color: #36958e;
+}
+
+/* Literal.Number.Integer */
+
+.highlight .mo {
+  color: #36958e;
+}
+
+/* Literal.Number.Oct */
+
+.highlight .sb {
+  color: #93a1a1;
+}
+
+/* Literal.String.Backtick */
+
+.highlight .sc {
+  color: #36958e;
+}
+
+/* Literal.String.Char */
+
+.highlight .sd {
+  color: #637c84;
+}
+
+/* Literal.String.Doc */
+
+.highlight .s2 {
+  color: #36958e;
+}
+
+/* Literal.String.Double */
+
+.highlight .se {
+  color: #cc7a6f;
+}
+
+/* Literal.String.Escape */
+
+.highlight .sh {
+  color: #637c84;
+}
+
+/* Literal.String.Heredoc */
+
+.highlight .si {
+  color: #36958e;
+}
+
+/* Literal.String.Interpol */
+
+.highlight .sx {
+  color: #36958e;
+}
+
+/* Literal.String.Other */
+
+.highlight .sr {
+  color: #dc322f;
+}
+
+/* Literal.String.Regex */
+
+.highlight .s1 {
+  color: #36958e;
+}
+
+/* Literal.String.Single */
+
+.highlight .ss {
+  color: #36958e;
+}
+
+/* Literal.String.Symbol */
+
+.highlight .bp {
+  color: #268bd2;
+}
+
+/* Name.Builtin.Pseudo */
+
+.highlight .vc {
+  color: #268bd2;
+}
+
+/* Name.Variable.Class */
+
+.highlight .vg {
+  color: #268bd2;
+}
+
+/* Name.Variable.Global */
+
+.highlight .vi {
+  color: #268bd2;
+}
+
+/* Name.Variable.Instance */
+
+.highlight .il {
+  color: #36958e;
 }
