--- a/css/ui.scss
+++ b/css/ui.scss
@@ -8,6 +8,8 @@ $fa-font-path: "../template/fonts";
 $source-code-font-path: "../template/fonts/source-code";
 
 @import "../template/lily/css/lily.scss";
+@import "syntax-highlighting";
+
 
 body {
   background-color: #F7F7F7;
@@ -22,6 +24,9 @@ body {
     color: #666;
     span.s1 {
       color: #999;
+    }
+    &:hover {
+      text-decoration: none;
     }
   }
 }
@@ -76,12 +81,12 @@ body {
   color: #484848;
 
   h1 {
-    margin-top: 10px;
-    margin-bottom: 10px;
+    margin-top: 0;
+    margin-bottom: 40px;
     line-height: 40px;
   }
   h2 {
-    margin-top: 30px;
+    margin-top: 0;
     margin-bottom: 20px;
     line-height: 40px;
   }
@@ -93,431 +98,80 @@ body {
   }
 }
 
+.footer {
+  margin-bottom: 100px;
+}
+
 .main.category-articles {
   .articles .article .subs {
     margin-left: 30px;
   }
 }
 
-.footer {
-  margin-bottom: 100px;
-}
-
-
-// ----------------------------
-
-.highlight pre {
-  background-color: transparent;
-  font-size: 14px;
-}
-
-.highlight pre code {
-  color: #637c84;
-  font-family: "source-code", '微软雅黑' !important;
-}
-
-.highlight {
-  color: #333333;
-  background: #f8f5ec;
-}
-
-.highlight .c {
-  color: #93a1a1;
-}
-
-
-.highlight .g {
-  color: #637c84;
-}
-
-/* Generic */
-
-.highlight .k {
-  color: #859900;
-}
-
-/* Keyword */
-
-.highlight .l {
-  color: #637c84;
-}
-
-/* Literal */
-
-.highlight .n {
-  color: #637c84;
-}
-
-/* Name */
-
-.highlight .o {
-  color: #859900;
-}
-
-/* Operator */
-
-.highlight .x {
-  color: #cc7a6f;
-}
-
-/* Other */
-
-.highlight .p {
-  color: #637c84;
-}
-
-/* Punctuation */
-
-.highlight .cm {
-  color: #93a1a1;
-}
-
-/* Comment.Multiline */
-
-.highlight .cp {
-  color: #859900;
-}
-
-/* Comment.Preproc */
-
-.highlight .c1 {
-  color: #93a1a1;
-}
-
-/* Comment.Single */
-
-.highlight .cs {
-  color: #859900;
-}
-
-/* Comment.Special */
-
-.highlight .gd {
-  color: #36958e;
-}
-
-/* Generic.Deleted */
-
-.highlight .ge {
-  font-style: italic;
-  color: #637c84;
-}
-
-/* Generic.Emph */
-
-.highlight .gr {
-  color: #dc322f;
-}
-
-/* Generic.Error */
-
-.highlight .gh {
-  color: #cc7a6f;
-}
-
-/* Generic.Heading */
-
-.highlight .gi {
-  color: #859900;
-}
-
-/* Generic.Inserted */
-
-.highlight .go {
-  color: #637c84;
-}
-
-/* Generic.Output */
-
-.highlight .gp {
-  color: #637c84;
-}
-
-/* Generic.Prompt */
-
-.highlight .gs {
-  font-weight: bold;
-  color: #637c84;
-}
-
-/* Generic.Strong */
-
-.highlight .gu {
-  color: #cc7a6f;
-}
-
-/* Generic.Subheading */
-
-.highlight .gt {
-  color: #637c84;
-}
-
-/* Generic.Traceback */
-
-.highlight .kc {
-  color: #cc7a6f;
-}
-
-/* Keyword.Constant */
-
-.highlight .kd {
-  color: #268bd2;
-}
-
-/* Keyword.Declaration */
-
-.highlight .kn {
-  color: #859900;
-}
-
-/* Keyword.Namespace */
-
-.highlight .kp {
-  color: #859900;
-}
-
-/* Keyword.Pseudo */
-
-.highlight .kr {
-  color: #268bd2;
-}
-
-/* Keyword.Reserved */
-
-.highlight .kt {
-  color: #dc322f;
-}
-
-/* Keyword.Type */
-
-.highlight .ld {
-  color: #637c84;
-}
-
-/* Literal.Date */
-
-.highlight .m {
-  color: #36958e;
-}
-
-/* Literal.Number */
-
-.highlight .s {
-  color: #36958e;
-}
-
-/* Literal.String */
-
-.highlight .na {
-  color: #637c84;
-}
-
-/* Name.Attribute */
-
-.highlight .nb {
-  color: #b58900;
-}
-
-/* Name.Builtin */
-
-.highlight .nc {
-  color: #268bd2;
-}
-
-/* Name.Class */
-
-.highlight .no {
-  color: #cc7a6f;
-}
-
-/* Name.Constant */
-
-.highlight .nd {
-  color: #268bd2;
-}
-
-/* Name.Decorator */
-
-.highlight .ni {
-  color: #cc7a6f;
-}
-
-/* Name.Entity */
-
-.highlight .ne {
-  color: #cc7a6f;
-}
-
-/* Name.Exception */
-
-.highlight .nf {
-  color: #268bd2;
-}
-
-/* Name.Function */
-
-.highlight .nl {
-  color: #637c84;
-}
-
-/* Name.Label */
-
-.highlight .nn {
-  color: #637c84;
-}
-
-/* Name.Namespace */
-
-.highlight .nx {
-  color: #637c84;
-}
-
-/* Name.Other */
-
-.highlight .py {
-  color: #637c84;
-}
-
-/* Name.Property */
-
-.highlight .nt {
-  color: #268bd2;
-}
-
-/* Name.Tag */
-
-.highlight .nv {
-  color: #268bd2;
-}
-
-/* Name.Variable */
-
-.highlight .ow {
-  color: #859900;
-}
-
-/* Operator.Word */
-
-.highlight .w {
-  color: #637c84;
-}
-
-/* Text.Whitespace */
-
-.highlight .mf {
-  color: #36958e;
-}
-
-/* Literal.Number.Float */
-
-.highlight .mh {
-  color: #36958e;
-}
-
-/* Literal.Number.Hex */
-
-.highlight .mi {
-  color: #36958e;
-}
-
-/* Literal.Number.Integer */
-
-.highlight .mo {
-  color: #36958e;
-}
-
-/* Literal.Number.Oct */
-
-.highlight .sb {
-  color: #93a1a1;
-}
-
-/* Literal.String.Backtick */
-
-.highlight .sc {
-  color: #36958e;
-}
-
-/* Literal.String.Char */
-
-.highlight .sd {
-  color: #637c84;
-}
-
-/* Literal.String.Doc */
-
-.highlight .s2 {
-  color: #36958e;
-}
-
-/* Literal.String.Double */
-
-.highlight .se {
-  color: #cc7a6f;
-}
-
-/* Literal.String.Escape */
-
-.highlight .sh {
-  color: #637c84;
-}
-
-/* Literal.String.Heredoc */
-
-.highlight .si {
-  color: #36958e;
-}
-
-/* Literal.String.Interpol */
-
-.highlight .sx {
-  color: #36958e;
-}
-
-/* Literal.String.Other */
-
-.highlight .sr {
-  color: #dc322f;
-}
-
-/* Literal.String.Regex */
-
-.highlight .s1 {
-  color: #36958e;
-}
-
-/* Literal.String.Single */
-
-.highlight .ss {
-  color: #36958e;
-}
-
-/* Literal.String.Symbol */
-
-.highlight .bp {
-  color: #268bd2;
-}
-
-/* Name.Builtin.Pseudo */
-
-.highlight .vc {
-  color: #268bd2;
-}
-
-/* Name.Variable.Class */
-
-.highlight .vg {
-  color: #268bd2;
-}
-
-/* Name.Variable.Global */
-
-.highlight .vi {
-  color: #268bd2;
-}
-
-/* Name.Variable.Instance */
-
-.highlight .il {
-  color: #36958e;
+.main {
+  ol {
+    counter-reset: li;
+    list-style: none;
+    position: relative;
+    padding-bottom: 10px;
+    padding-left: 0;
+    
+    li {
+      padding: 5px 0 5px 55px;
+      position: relative;
+      margin-bottom: 5px;
+
+      &:before {
+        content: counter(li);
+        counter-increment: li;
+        position: absolute;
+        top:0;left:0;height:100%;width:30px;
+        padding:0 10px 0 0 ;
+        color: mix(lighten($area-info, 10%), #ccc, 60%);
+        font-size: 22px;
+        font-weight: bold;
+        line-height: 32px;
+        text-align: right;
+        border-right: solid 1px #ddd;
+      }
+
+      p {
+        margin-top: 0;
+        margin-bottom: 10px;
+      }
+    }
+  }
+
+  ul {
+    counter-reset: li;
+    list-style: none;
+    position: relative;
+    padding-bottom: 10px;
+    padding-left: 0;
+    
+    li {
+      padding: 5px 0 5px 55px;
+      position: relative;
+      margin-bottom: 5px;
+
+      &:before {
+        content: counter(li);
+        counter-increment: li;
+        position: absolute;
+        top:0;left:0;height:100%;width:30px;
+        padding:0 10px 0 0 ;
+        color: mix(lighten($area-info, 10%), #ccc, 60%);
+        font-size: 22px;
+        font-weight: bold;
+        line-height: 32px;
+        text-align: right;
+        border-right: solid 1px #ddd;
+      }
+
+      p {
+        margin-top: 0;
+        margin-bottom: 10px;
+      }
+    }
+  }
 }
