--- a/_layouts/github-account.html
+++ b/_layouts/github-account.html
@@ -8,8 +8,8 @@
         <div class='sidebar col-pad-3'>
           {% include sidebar.html %}
         </div>
-        <div class='main col-pad-9 category-articles'>
-          {% include category-articles.html %}
+        <div class='main col-pad-9 github-account'>
+          {% include account-repos.html %}
         </div>
       </div>
       {% include footer.html %}
