--- a/_layouts/repo.html
+++ b/_layouts/repo.html
@@ -8,8 +8,8 @@
         <div class='sidebar col-pad-3'>
           {% include sidebar.html %}
         </div>
-        <div class='main col-pad-9'>
-          {% include article-content.html %}
+        <div class='main col-pad-9 repo'>
+          {% include repo-content.html %}
         </div>
       </div>
       {% include footer.html %}
