--- a/_sass/_syntax-highlighting.scss
+++ b/_sass/_syntax-highlighting.scss
@@ -1,6 +1,17 @@
+.hll {
+  background-color: #f7ebc6;
+  border-left: 5px solid #f7d87c;
+  display: block;
+  margin-left: -10px;
+  margin-right: -10px;
+  padding-left: 9px;
+}
+
 .highlight pre {
   background-color: transparent;
   font-size: 14px;
+  border: 0 none;
+  padding: 10px;
 }
 
 .highlight pre code {
@@ -11,6 +22,18 @@
 .highlight {
   color: #333333;
   background: #f8f5ec;
+  position: relative;
+  padding-top: 23px;
+
+  &:after {
+    position: absolute;
+    top:0;right:0;left:0;
+    padding: 3px 7px;
+    font-size: 12px;
+    content: "Code";
+    color: #c2c0bc;
+    background-color: #f1ede4;
+  }
 }
 
 .highlight .c {
