--- a/_includes/repo-content.html
+++ b/_includes/repo-content.html
@@ -48,11 +48,11 @@
 {% endif %}
 
 <h4>相关技能</h4>
-<ul class='skills'>
+<div class='skills'>
   {% for skill in page.skills %}
-    <li class='skill'>{{ skill }}</li>
+    <div class='skill'>{{ skill }}</div>
   {% endfor %}
-</ul>
+</div>
 
 <h4>设计用途</h4>
 <p>
