--- a/_includes/account-repos.html
+++ b/_includes/account-repos.html
@@ -10,9 +10,9 @@
 
 <ul>
   {% assign repos = site.repos | where: 'account', page.title %}
-  {% for repo in site.repos %}
+  {% for repo in repos %}
     <li>
-      <a class='repo' href="{{ site.baseurl }}/repos/{{ repo.title | replace:'_','-' }}.html">{{ repo.title }}</a>
+      <strong><a class='repo' href="{{ site.baseurl }}/repos/{{ repo.title | downcase | replace:'_','-' }}.html">{{ repo.title }}</a></strong>
       <p class='desc'>{{ repo.desc }}</p>
     </li>
   {% endfor %}
