增加简单搜索

--- a/_includes/htmlhead.html
+++ b/_includes/htmlhead.html
@@ -7,5 +7,8 @@
   <script type='text/javascript' src='{{ site.baseurl }}/js/turbolinks.js'></script>
   <script type='text/javascript' src='http://libs.useso.com/js/jquery/2.1.1/jquery.min.js'></script>
 
+  <script type='text/javascript' src='{{ site.baseurl }}/js/rx.lite.min.js'></script>
+  <script type='text/javascript' src='{{ site.baseurl }}/js/rx.jquery.min.js'></script>
+
   <script type='text/javascript' src='{{ site.baseurl }}/js/ui.js'></script>
 </head>
