--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -10,6 +10,14 @@
         </div>
         <div class='main col-pad-9'>
           {{ content }}
+
+          <div class='page-search'>
+            <div class='control'>
+              <input class='form-control' type='text' placeholder='搜索' />
+            </div>
+            <div class='list'>
+            </div>
+          </div>
         </div>
       </div>
       {% include footer.html %}
